# WSF

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md
cmake/: Base.cmake  Example.cmake  Libraries.cmake  Mongo.cmake  Mysql.cmake  Redis.cmake  Test.cmake  Websocket.cmake
example/: Example.cpp
example/odbc/: Mongo.hpp  Redis.hpp
example/odbc/mongo/: api.hpp  mongo.delete.hpp  mongo.find.hpp  mongo.insert.hpp  mongo.update.hpp  placeholder.hpp
example/odbc/redis/: api.hpp  placeholder.hpp
example/routes/: Mongo.example.route.hpp  Redis.example.route.hpp  Server.route.hpp
example/services/: Mongo.example.service.hpp  Redis.example.service.hpp  Server.service.hpp
src/: Config.hpp  Router.hpp  Server.cpp  Shared.hpp
src/odbc/: Mongo.hpp  Mongo.shell.hpp  Mysql.shell.hpp  Redis.hpp  Redis.shell.hpp
src/routes/: Mongo.example.route.hpp  Server.route.hpp
src/services/: Mongo.example.service.hpp  Server.service.hpp
src/utility/: CLI.utility.hpp  Request.utility.hpp  Response.utility.hpp  Router.utility.hpp  Websocket.utility.hpp
test/: CMakeLists.txt  Config.test.cpp  Mongo.shell.test.cpp  ServerData.test.cpp  codecov.test.sh
test/Mongo/: Mongo.test.cpp
test/Redis/: Redis.test.cpp
test/Standard/: Config.test.cpp  Mongo.shell.test.cpp  Redis.shell.test.cpp  ServerData.test.cpp
