CMAKE_MINIMUM_REQUIRED(VERSION 3.7)
SET(CMAKE_CXX_STANDARD 11)
ADD_DEFINITIONS(-Wno-sign-compare -Wno-enum-compare)

PROJECT(WSF)

INCLUDE("${CMAKE_CURRENT_LIST_DIR}/cmake/Libraries.cmake")
INCLUDE("${CMAKE_CURRENT_LIST_DIR}/cmake/Test.cmake")
INCLUDE("${CMAKE_CURRENT_LIST_DIR}/cmake/Example.cmake")

INSTALL(
  DIRECTORY ${CMAKE_SOURCE_DIR}/src/
  DESTINATION "include/wsf"
  FILES_MATCHING PATTERN "*.hpp"
)